dyn-sched: Dynamic time marker and task updates
-New thin div as current time marker
-Tasks update based on movement of marker
-updateEvents() function calls marker and task update 1 sec freq

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <div id="timeMarker"></div>
     <main>
         <table>
             <tr id="menu">
@@ -34,8 +35,7 @@
                 <input type="submit" id="addTaskSubmit" value="Submit">
                 <input type="button" id="addTaskCancel" value="Cancel">
             </form>
-        </div>
-        
+        </div>        
         <script src="dynamic-scheduler.js"></script> 
     </main>
 </body>
