dyn-sched: Task deletion popup
-Dynamically generated popup menu for removing task blocks
-Task blocks reorder automatically on deletion

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </tr>
         </table>
 
-        <div id="addMenu">
+        <div id="addMenu" class="popup">
             <form name="addForm" id="addForm">
                 <label for="taskName">Name</label>
                 <input type="text" id="taskName" name="taskName" placeholder="Task Name">
@@ -35,7 +35,8 @@
                 <input type="submit" id="addTaskSubmit" value="Submit">
                 <input type="button" id="addTaskCancel" value="Cancel">
             </form>
-        </div>        
+        </div>    
+
         <script src="dynamic-scheduler.js"></script> 
     </main>
 </body>
