dyn-sched: Downtime measurement + Debug
-Fixed some downtime related bugs
 -Tasks now spawn at current time regardless of time since last finish
 -Intermittent downtime only created on new task creation
  -ie. gap from now -> prev finish not filled until new task appears
-Schedule start and end now decoupled from timeline drawing
 -New divs to indicate and new class "marker" for styling
-Time can be moved with arrow up or down if "debug" = true

--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
 </head>
 
 <body>
-    <div id="timeMarker"></div>
+    <div id="timeMarker" class="marker"></div>
+    <div id="startMarker" class="marker"></div>
+    <div id="stopMarker" class="marker"></div>
     <main>
         <table>
             <tr id="menu">
                 <td><input id="addButton" type="button" value="Add"></td>
-                <td><input type="button" value="Remove"></td>
+                <td>Total Downtime: <div id="downtimeCount"></div></td>
             </tr>
             <tr id="schedule">
                 <td id="timeline"><canvas id="timelineCanvas"></canvas></td>
