dyn-sched: Increased time displays
-Active tasks display a countdown
-Finished tasks display their start and finish times
-New marker trails final task to display est. finish time

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div id="timeMarker" class="marker"></div>
     <div id="startMarker" class="marker"></div>
     <div id="stopMarker" class="marker"></div>
+    <div id="finishMarker" class="marker"></div>
     <main>
         <table>
             <tr id="menu">
