dyn-sched: Initial overtime implementation
-Task popup includes button for allowing OT
-If allowed, when finished, create a following OT task
-OT tasks don't finish naturally must be manually deactivated
 -Helpful for when tasks run slightly over and shouldn't create downtime
-Counter for overtime amount added
-NOTE: overtime tasks only need "finish" and "cancel" in popup
 -other popup options are still available but untested for now

--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
         <table>
             <tr id="menu">
                 <td><input id="addButton" type="button" value="Add"></td>
-                <td>Total Downtime: <div id="downtimeCount"></div></td>
+                <td>Downtime: <div id="downtimeCount"></div></td>
+                <td>Overtime: <div id="overtimeCount"></div></div></td>
             </tr>
             <tr id="schedule">
                 <td id="timeline"><canvas id="timelineCanvas"></canvas></td>
-                <td id="taskline"></td>
+                <td colspan="2" id="taskline"></td>
             </tr>
         </table>
 
